crates/jolt_java_fmt/tests/snapshots/corpus__properties__layout_fit_boundaries__cast_and_instanceof.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class CastAndInstanceofLayoutFitBoundaries {
  void layout(Object someObjectReference) {
    Object value =
      (SomeVeryLongCastTargetTypeName)
        someExpressionThatIsAlsoQuiteLongHere.getValue();
    boolean matches =
      someObjectReference
        instanceof SomeVeryLongPatternTypeName someBindingName;
  }
}

diagnostics:
(none)
