crates/jolt_java_fmt/tests/snapshots/corpus__properties__layout_fit_boundaries__expression_statement_assignment.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Example {
  void method() {
    currentEstimate =
      (currentEstimate + xxxxxxxxxxxxx / currentEstimate) / 2.0f;
  }
}

diagnostics:
(none)
