crates/jolt_java_fmt/tests/snapshots/corpus__properties__layout_fit_boundaries__field_initializer.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Example {
  boolean value =
    xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx ? true : false;
}

diagnostics:
(none)
