crates/jolt_java_fmt/tests/snapshots/corpus__properties__layout_fit_boundaries__return_statement_ternary.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Example {
  boolean method() {
    return xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
      ? true
      : false;
  }
}

diagnostics:
(none)
